--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,9 @@
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
     "clsx": "^1.0.4",
+    "lodash.template": "^4.5.0",
+    "mixin-deep": "^2.0.1",
+    "parsejson": "^0.0.3",
     "prop-types": "^15.7.2",
     "react": "^16.10.2",
     "react-chat-widget": "^2.1.5",
@@ -16,7 +19,8 @@
     "react-scripts": "3.2.0",
     "react-time-format": "^0.0.5",
     "set-value": "^3.0.1",
-    "socket.io-client": "^2.3.0"
+    "socket.io-client": "^2.3.0",
+    "ws": "^7.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
