--- a/backend/package.json
+++ b/backend/package.json
@@ -2,6 +2,9 @@
   "name": "chat-nodejs-react",
   "version": "1.0.0",
   "description": "Chat implementado com NodeJs e ReactJs",
+  "scripts": {
+    "dev": "gulp nodemon-src"
+  },
   "author": "mateusxis",
   "license": "MIT",
   "dependencies": {
@@ -9,12 +12,19 @@
     "body-parser": "^1.19.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "helmet": "^3.21.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.7.4",
-    "morgan": "^1.9.1",
-    "socketio": "^1.0.0"
+    "socketio": "^1.0.0",
+    "swagger-ui-express": "^4.1.2"
+  },
+  "devDependencies": {
+    "dotenv": "^8.1.0",
+    "gulp": "^4.0.2",
+    "gulp-eslint": "^6.0.0",
+    "gulp-nodemon": "^2.4.2",
+    "gulp-swagger": "^1.0.1",
+    "morgan": "^1.9.1"
   }
 }
