--- a/backend/src/api/index.yaml
+++ b/backend/src/api/index.yaml
@@ -1,14 +1,13 @@
 swagger: "2.0"
 info:
   version: 1.0.0
-  title: sw-gruposoma-api
-  description: Repositório das APIs do Projeto Query
+  title: chat-mais-api
+  description: Repository of APIs
   contact:
-    name: SomaLabs
-    email: somalabs@somagrupo.com.br
-    url: http://www.somalabs.com.br
-host: query-api.somalabs.com.br
-basePath: /apis/v1/
+    name: mateusxis
+    email: mateusx@poli.ufrj.br
+host: localhost
+basePath: /api/
 schemes:
   - http
 consumes:
@@ -16,382 +15,245 @@ consumes:
 produces:
   - application/json
 paths:
-  /controles:
+  /messages:
     get:
       tags: 
-      - Controles
+      - Messages
       description: |
-        Retorna o ultimo query_controle salvo no banco de dados.
-      operationId: buscaUltimoQueryControle
+        Return messages saved in database
+      operationId: showMessage
       responses:
         200:
           description: OK
           schema:
-            $ref: '#/definitions/query_controle'
-        204:
-          description: No content
+            $ref: '#/definitions/message'
         400:
           description: Bad Request
           schema:
             $ref: '#/definitions/Error'
     post:
       tags: 
-      - Controles
-      description: Salva query_controle no banco de dados.
-      operationId: salvaQueryControle
+      - Messages
+      description: messages save in database
+      operationId: storeMessage
       parameters:
-        - name: controle
+        - name: message
           in: body
-          description: query_controle adicionado no banco de dados.
+          description: message will saved in database.
           required: true
           schema:
-            $ref: '#/definitions/query_controle'
+            $ref: '#/definitions/message'
       responses:
         201:
           description: Created
           schema:
-            $ref: '#/definitions/query_controle'
+            $ref: '#/definitions/message'
         400:
           description: Bad Request
           schema:
             $ref: '#/definitions/Error'
-  /databases:
-    get:
-      tags:
-      - Databases
-      description: Lista todas as query_databases salvas no banco de dados.
-      operationId: listaQueryDatabase
-      parameters:
-        - name: ativado
-          in: header
-          description: Busca as query_database que estão ativados
-          required: true
-          type: integer
-          format: int32
-      responses:
-        200:
-          description: OK
-          schema:
-            $ref: '#/definitions/query_database'
-        204:
-          description: No content
-        400:
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/Error'
-  /execucoes:
-    get:
+  /messages/{id}:
+    delete:
       tags: 
-      - Execucoes
-      description: Busca todas query_execucao's salvas no banco de dados.
-      operationId: listaQueryExecucao
-      parameters:
-        - name: id_query_sql
-          in: query
-          description: Busca as query_execucao's estão ligadas pelo id_query_sql
-          required: true
-          type: integer
-          format: int32
-      responses:
-        200:
-          description: OK
-          schema:
-            type: array
-            items:
-              $ref: '#/definitions/query_execucao'
-        204:
-          description: No content
-        400:
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/Error'
-    post:
-      tags: 
-      - Execucoes
-      description: Salva query_execucao no banco de dados.
-      operationId: salvaQueryExecucao
-      parameters:
-        - name: execucao
-          in: body
-          description: query_execucao adicionado no banco de dados.
-          required: true
-          schema:
-            $ref: '#/definitions/query_execucao'
-      responses:
-        201:
-          description: Created
-          schema:
-            $ref: '#/definitions/query_execucao'
-        400:
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/Error'
-  /execucoes/{id}:
-    get:
-      tags:
-      - Execucoes
-      description: Retorna um query_execucao com base em um único ID.
-      operationId: buscaQueryExecucao
+      - Messages
+      description: Delete message in database by _id
+      operationId: deleteMessage
       parameters:
         - name: id
           in: path
-          description: ID do query_execucao a buscar
+          description: _id of message
           required: true
-          type: integer
-          format: int64
+          type: string
+      responses:
+        200:
+          description: OK
+          schema:
+            $ref: '#/definitions/message'
+        400:
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/Error'
+    get:
+      tags:
+      - Messages
+      description: Return one message by _id
+      operationId: indexMessage
+      parameters:
+        - name: id
+          in: path
+          description: _id of message
+          required: true
+          type: string
       responses:
         200:
           description: OK
           schema:
             type: array
             items:
-              $ref: '#/definitions/query_execucao'
-        204:
-          description: No content
+              $ref: '#/definitions/message'
         400:
           description: Bad Request
           schema:
             $ref: '#/definitions/Error'
     put:
       tags: 
-      - Execucoes
-      description: Atualiza um query_execucao com base em um único ID.
-      operationId: atualizaQueryExecucao
+      - Messages
+      description: Update message in database by _id
+      operationId: updateMessage
       parameters:
         - name: id
           in: path
-          description: ID do query_execucao a buscar
+          description: _id of message
           required: true
-          type: integer
-          format: int64
-        - name: execucao
+          type: string
+        - name: message
           in: body
-          description: query_execucao adicionado no banco de dados.
+          description: message will uptade in database
           required: true
           schema:
-            $ref: '#/definitions/query_execucao'
+            $ref: '#/definitions/message'
       responses:
         200:
           description: OK
           schema:
-            $ref: '#/definitions/query_execucao'
+            $ref: '#/definitions/message'
         400:
           description: Bad Request
           schema:
             $ref: '#/definitions/Error'
-  /sqls:
+  /users:
     get:
       tags: 
-      - SQLs
-      description: Busca todas query_sql's salvas no banco de dados.
-      operationId: listaQuerySQL
-      parameters:
-        - name: filtro
-          in: query
-          description: Usa filtro para filtra query_sql
-          required: false
-          type: integer
-          format: int32
+      - Users
+      description: |
+        Return users saved in database
+      operationId: showMessage
       responses:
         200:
           description: OK
           schema:
-            type: array
-            items:
-              $ref: '#/definitions/query_sql'
-        204:
-          description: No content
+            $ref: '#/definitions/user'
         400:
           description: Bad Request
           schema:
             $ref: '#/definitions/Error'
     post:
       tags: 
-      - SQLs
-      description: Salva query_sql no banco de dados.
-      operationId: salvaQuerySQL
+      - Users
+      description: users save in database
+      operationId: storeMessage
       parameters:
-        - name: sql
+        - name: user
           in: body
-          description: query_sql adicionado no banco de dados.
+          description: user will saved in database.
           required: true
           schema:
-            $ref: '#/definitions/query_sql'
+            $ref: '#/definitions/user'
       responses:
         201:
           description: Created
           schema:
-            $ref: '#/definitions/query_sql'
+            $ref: '#/definitions/user'
         400:
           description: Bad Request
           schema:
             $ref: '#/definitions/Error'
-  /sqls/{id}:
-    get:
-      tags:
-      - SQLs
-      description: Retorna um query_sql com base em um único ID.
-      operationId: buscaQuerySQL
+  /users/{id}:
+    delete:
+      tags: 
+      - Users
+      description: Delete user in database by _id
+      operationId: deleteMessage
       parameters:
         - name: id
           in: path
-          description: ID do query_sql a buscar
+          description: _id of user
           required: true
-          type: integer
-          format: int64
+          type: string
+      responses:
+        200:
+          description: OK
+          schema:
+            $ref: '#/definitions/user'
+        400:
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/Error'
+    get:
+      tags:
+      - Users
+      description: Return one user by _id
+      operationId: indexMessage
+      parameters:
+        - name: id
+          in: path
+          description: _id of user
+          required: true
+          type: string
       responses:
         200:
           description: OK
           schema:
             type: array
             items:
-              $ref: '#/definitions/query_sql'
-        204:
-          description: No content
+              $ref: '#/definitions/user'
         400:
           description: Bad Request
           schema:
             $ref: '#/definitions/Error'
     put:
       tags: 
-      - SQLs
-      description: Atualiza um query_sql com base em um único ID.
-      operationId: atualizaQuerySQL
+      - Users
+      description: Update user in database by _id
+      operationId: updateMessage
       parameters:
         - name: id
           in: path
-          description: ID do query_sql a buscar
+          description: _id of user
           required: true
-          type: integer
-          format: int64
-        - name: sql
+          type: string
+        - name: user
           in: body
-          description: query_sql adicionado no banco de dados.
+          description: user will uptade in database
           required: true
           schema:
-            $ref: '#/definitions/query_sql'
+            $ref: '#/definitions/user'
       responses:
         200:
           description: OK
           schema:
-            $ref: '#/definitions/query_sql'
-        400:
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/Error'
-  /sqls/executa/{id}:
-    post:
-      tags: 
-      - SQLs
-      description: Executa query_sql no executador de query do sistema.
-      operationId: chamaExecucaoQuerySQL
-      parameters:
-        - name: id
-          in: path
-          description: ID do query_sql a buscar
-          required: true
-          type: integer
-          format: int64
-        - name: sql
-          in: body
-          description: query_sql adicionado no banco de dados.
-          required: true
-          schema:
-            $ref: '#/definitions/query_sql'
-      responses:
-        200:
-          description: OK
-          schema:
-            $ref: '#/definitions/query_sql'
+            $ref: '#/definitions/user'
         400:
           description: Bad Request
           schema:
             $ref: '#/definitions/Error'
 definitions:
-  query_controle:
+  message:
     type:
       object
     properties:
-      id_query_controle:
-        type: integer
-        format: int64
-      ativado:
-        type: integer
-        format: int64
-      data_alteracao:
+      _id:
         type: string
-        format: date-time
+      userId:
+        type: string
+      message:
+        type: string
     required:
-      - id_query_controle
-  query_database:
+      - _id
+  user:
     type:
       object
     properties:
-      id_query_database:
-        type: integer
-        format: int64
-      pool:
+      _id:
         type: string
-      tipo:
+      nickname:
         type: string
-    required:
-      - id_query_database
-  query_execucao:
-    type:
-      object
-    properties:
-      id_query_execucao:
-        type: integer
-        format: int64
-      id_query_sql:
-        type: integer
-        format: int64
-      status:
+      socket:
         type: string
-      quantidades:
-        type: integer
-        format: int64
-      tempo_execucao:
-        type: string
-      data_execucao:
-        type: string
-        format: date-time
-    required:
-      - id_query_execucao
-      - id_query_sql
-  query_sql:
-    type:
-      object
-    properties:
-      id_query_sql:
-        type: integer
-        format: int64
-      id_query_database:
-        type: integer
-        format: int64
-      sql:
-        type: string
-      descricao:
-        type: string
-      periocidade:
-        type: string
-      ativado:
-        type: integer
-      excluido:
-        type: integer
-      achieved:
-        type: string
-      achievedCumulative:
-        type: string
-      externalId:
-        type: string
-      month:
-        type: integer
-      year:
+      active:
         type: integer
     required:
-      - id_query_sql
-      - id_query_database
+      - _id
   Error:
     required:
       - code
