--- a/backend/package.json
+++ b/backend/package.json
@@ -15,10 +15,13 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "helmet": "^3.21.1",
+    "lodash.template": "^4.5.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.7.4",
+    "parsejson": "^0.0.3",
     "socketio": "^1.0.0",
-    "swagger-ui-express": "^4.1.2"
+    "swagger-ui-express": "^4.1.2",
+    "ws": "^7.1.2"
   },
   "devDependencies": {
     "dotenv": "^8.1.0",
