--- a/backend/package.json
+++ b/backend/package.json
@@ -17,11 +17,11 @@
     "helmet": "^3.21.1",
     "lodash.template": "^4.5.0",
     "method-override": "^3.0.0",
-    "mongoose": "^5.7.4",
+    "mongoose": "5.7.11",
     "parsejson": "^0.0.3",
     "socketio": "^1.0.0",
     "swagger-ui-express": "^4.1.2",
-    "ws": "^7.1.2"
+    "ws": "^7.2.0"
   },
   "devDependencies": {
     "dotenv": "^8.1.0",
