--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,7 @@
     "lodash.template": "^4.5.0",
     "method-override": "^3.0.0",
     "mongoose": "5.7.11",
-    "socketio": "^1.0.0",
+    "socket.io": "^4.0.2",
     "swagger-ui-express": "^4.1.2",
     "ws": "^7.2.0"
   },
