--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,7 @@
     "react-chat-widget": "^2.1.5",
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^4.0.3",
     "react-time-format": "^0.0.5",
     "set-value": "^3.0.1",
     "socket.io-client": "^4.0.2",
